@@ -56,6 +56,12 @@ task buildWebserverJar(type: FatCapsule, dependsOn: project(':node').tasks.jar) 
         // If you change these flags, please also update Driver.kt
         jvmArgs = ['-Xmx200m', '-XX:+UseG1GC']
     }
+
+    manifest {
+        if (JavaVersion.current() == JavaVersion.VERSION_11) {
+            attributes('Add-Opens': 'java.management/com.sun.jmx.mbeanserver java.base/java.lang')
+        }
+    }
 }
 
 assemble.dependsOn buildWebserverJar
